# SKN10-FINAL-1Team

./: .env.example  .gitignore  1가지도구호출.txt  2가지도구호출.txt  AI_Telco_Usecase_RAG_Git.md  DATABASE_SCHEMA.md  ML_진짜_최종_모델.ipynb  README.md  Sample_Customer_Data_Without_Churn.csv  TROUBLESHOOTING_REPORT.md  accuracy_popularity_quadrant.py  add_ids.py  analysis_result.txt  analysis_result_test.txt  app.py  automated_s3_llm_analysis.py  call_llm.py  categorical_cols.pkl  create_vector_db.py  db.sqlite3  flask_server.py  flow.py  graph.py  graph_flow.py  index.md  ingest_html.py  label_encoders.pkl  langgrapg_test.ipynb  llm_cache.json  llm_script.py  main.py  nodes.py  pipeline_orchestrator.py  rag.py  requirements.txt  rr.html  run_fastapi.sh  run_pipeline.bat  runpod.py  s3_workflow_and_analysis.md  (+20 more)
backend/: .env.example  llm_cache.json  package-lock.json  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_github_access_token.py  0002_user_github_token_user_profile_image.py  0002_user_profile_image_url.py  0003_organization_updated_at_user_profile_image_scantask.py  0003_remove_user_profile_image_url_user_profile_image.py  0004_alter_user_profile_image.py
backend/accounts/utils/: __init__.py  flow.py  main.py  nodes.py
backend/config/: asgi.py  settings.py  urls.py
backend/conversations/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/conversations/migrations/: 0001_initial.py  0002_checkpoint_checkpointblob_checkpointmigration_and_more.py  0003_delete_checkpoint_delete_checkpointblob_and_more.py  0004_chatsession_thread_id.py  0005_chatmessage_tool_data_alter_chatsession_agent_type.py  0006_chatsession_deleted_check.py  0006_messagefile.py  0007_chatmessage_file_content_chatmessage_file_name_and_more.py
backend/conversations/templatetags/: chat_extras.py
backend/knowledge/: admin.py  models.py  urls.py  utils.py  views.py
backend/knowledge/migrations/: 0001_create_vector_extension.py  0001_initial.py  0002_alter_summarynewskeywords_options_and_more.py
backend/mlops/: admin.py  hybrid_search.py  models.py
backend/mlops/migrations/: 0001_initial.py
backend/module/langgraph/: agents.py  init.py  router.py  state.py  tools.py
backend/multiflow/: README.md  intent_analysis_flow.png.html
backend/templates/: _header.html  home.html
backend/templates/accounts/: login.html  profile.html  setting.html
backend/templates/conversations/: chatbot.html  chatbot.html.bak  chatbot2.html
chroma_db/: chroma.sqlite3
swarm_agent/: .env.example  .gitignore  RAG 질문답변쌍.csv  main.py  pyproject.toml
(+271 files in other folders)
