[project]
name = "backend"
version = "0.1.0"
description = "Django backend for multiflow using crewAI"
authors = [
    { name = "INHO HWANG", email = "in9045@naver.com" },
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.0.0,<4.0.0",
    "pillow>=9.0.0,<10.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "boto3",
    "pinecone",
    "joblib>=1.0.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "catboost>=1.0.0,<2.0.0",
    "imbalanced-learn == 0.13.0",
    "Django==4.2.10",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.0",
    "uvicorn==0.23.2"
]

[project.scripts]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
